--- a/css/custom.css
+++ b/css/custom.css
@@ -115,7 +115,7 @@ body {
   display: block;
 }
 .bespoke-title img {
-  height: 3rem;
+  height: 70px;
 }
 
 .animate {
@@ -220,23 +220,33 @@ body {
   }
 }
 
+.carousel-title {
+  width: 80%;
+}
+
 .small-row {
   margin-bottom: 60px;
 }
 
 .card-title {
   color: #23b86d;
-  text-shadow: 8px 8px 18px #747474;
+  text-shadow: 8px 8px 18px rgba(116, 116, 116, 0.5);
   font-size: 1.4rem;
 }
 @media (min-width: 650px) {
   .card-title {
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
 }
 @media (min-width: 1024px) {
   .card-title {
-    font-size: 3rem;
+    font-size: 2.3rem;
+  }
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .card-text {
+    display: none;
   }
 }
 
@@ -283,52 +293,8 @@ body {
   background: rgba(0, 0, 0, 0.65);
 }
 
-.tile:hover .tile-overlay {
-  transform: translate(0, 0);
-}
-
-.start-up {
-  transform: translateY(100%);
-  opacity: 1;
-}
-
-.start-down {
-  transform: translateY(-100%);
-  opacity: 1;
-}
-
-.start-left {
-  transform: translateX(100%);
-  opacity: 1;
-}
-
-.start-right {
-  transform: translateX(-100%);
-  opacity: 1;
-}
-
 .start-opaque {
   opacity: 0;
-}
-
-.dissolve:hover .start-opaque {
-  opacity: 1;
-}
-
-.up:hover img {
-  transform: translateY(-100%);
-}
-
-.down:hover img {
-  transform: translateY(100%);
-}
-
-.right:hover img {
-  transform: translateX(100%);
-}
-
-.left:hover img {
-  transform: translateX(-100%);
 }
 
 .delay:hover img {
@@ -381,7 +347,7 @@ body {
   width: auto;
   min-width: 250px;
   max-height: 100%;
-  background-size: center;
+  background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
   transition: transform 1.5s ease-in-out;
