--- a/css/custom.css
+++ b/css/custom.css
@@ -130,12 +130,6 @@ body {
   animation-name: slideIn;
 }
 
-.carousel {
-  height: 400px;
-  width: 100%;
-  margin-bottom: 20px;
-}
-
 .stuck {
   position: fixed;
   top: 0;
@@ -205,6 +199,18 @@ body {
   text-decoration: none;
 }
 
+.carousel {
+  height: 400px;
+  width: 100%;
+  margin-bottom: 20px;
+  font-size: 0.8rem;
+}
+@media (min-width: 650px) {
+  .carousel {
+    font-size: 1rem;
+  }
+}
+
 .c-image {
   height: 100%;
 }
@@ -221,7 +227,17 @@ body {
 }
 
 .carousel-title {
-  width: 80%;
+  width: 60vw;
+}
+@media (min-width: 650px) {
+  .carousel-title {
+    width: 45vw;
+  }
+}
+@media (min-width: 1024px) {
+  .carousel-title {
+    width: 35vw;
+  }
 }
 
 .small-row {
@@ -244,7 +260,7 @@ body {
   }
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (hover: hover), (min-width: 450px) {
   .card-text {
     display: none;
   }
@@ -347,7 +363,7 @@ body {
   width: auto;
   min-width: 250px;
   max-height: 100%;
-  background-position: center;
+  background-size: center;
   background-repeat: no-repeat;
   overflow: hidden;
   transition: transform 1.5s ease-in-out;
