Removed hover card text for touchscreens
work example cards hover text removed and replaced by static text above/beside the example.

--- a/css/custom.css
+++ b/css/custom.css
@@ -260,9 +260,17 @@ body {
   }
 }
 
-@media (hover: hover), (min-width: 450px) {
+@media (hover: hover) {
   .card-text {
     display: none;
+  }
+}
+.card-text .overlay-text {
+  display: none;
+}
+@media (hover: none), (min-width: 450px) {
+  .card-text .overlay-text {
+    display: inline;
   }
 }
 
