--- a/css/custom.css
+++ b/css/custom.css
@@ -265,13 +265,25 @@ body {
     display: none;
   }
 }
-.card-text .overlay-text {
+
+.overlay-text {
   display: none;
 }
-@media (hover: none), (min-width: 450px) {
-  .card-text .overlay-text {
+@media (min-width: 450px) {
+  .overlay-text {
     display: inline;
   }
+}
+
+.addFocus {
+  transition: transform 1s ease-in-out, background-color 1s ease-in-out, box-shadow 1s ease-in-out;
+  transform: scale(1.2);
+  box-shadow: 0px 0px 9999px 9999px rgba(255, 182, 109, 0.3);
+  background: rgba(255, 182, 109, 0.5);
+  border-radius: 20px;
+}
+.addFocus .card-title {
+  color: #fff;
 }
 
 .tileframe {
