--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -6,7 +6,7 @@ $main-white: #fffdfb;
 $break-sm: 320px;
 $break-med: 650px;
 $break-lg: 1024px;
-
+$easy: 1s ease-in-out;
 
 ///////////////////////////////////////////
 //           Mixins                      //
@@ -320,16 +320,24 @@ body {
     @media (hover: hover){
         display: none;
     }
+}
 .overlay-text{
     display: none;
-    @media (hover: none), (min-width: 450px) {
+    @media (min-width: 450px) {
         display: inline;
     }
 }
 
-
+.addFocus {
+    transition: transform 1s ease-in-out, background-color $easy, box-shadow $easy;
+    transform: scale(1.2);
+    box-shadow: 0px 0px 9999px 9999px rgba(255, 182, 109, 0.3);
+    background: rgba(255, 182, 109, 0.5);
+    border-radius: 20px;
+    .card-title{
+        color: #fff;
+    }
 }
-
 
 .tileframe{
     overflow:hidden;
