Changed transition timing
changed transition timing of work example interactions

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -6,7 +6,7 @@ $main-white: #fffdfb;
 $break-sm: 320px;
 $break-med: 650px;
 $break-lg: 1024px;
-$easy: 1s ease-in-out;
+$easy: .3s ease-in-out;
 
 ///////////////////////////////////////////
 //           Mixins                      //
