--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -329,7 +329,7 @@ body {
 }
 
 .addFocus {
-    transition: transform 1s ease-in-out, background-color $easy, box-shadow $easy;
+    transition: transform 1s ease-in, background-color $easy, box-shadow $easy;
     transform: scale(1.2);
     box-shadow: 0px 0px 9999px 9999px rgba(255, 182, 109, 0.3);
     background: rgba(255, 182, 109, 0.5);
