--- a/css/custom.css
+++ b/css/custom.css
@@ -276,14 +276,9 @@ body {
 }
 
 .addFocus {
-  transition: transform 1s ease-in, background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 1s ease-in, box-shadow 0.3s ease-in-out;
   transform: scale(1.2);
-  box-shadow: 0px 0px 9999px 9999px rgba(255, 182, 109, 0.3);
-  background: rgba(255, 182, 109, 0.5);
-  border-radius: 20px;
-}
-.addFocus .card-title {
-  color: #fff;
+  box-shadow: 0px 0px 10px 10px rgba(167, 167, 167, 0.3);
 }
 
 .tileframe {
