--- a/css/custom.css
+++ b/css/custom.css
@@ -276,9 +276,10 @@ body {
 }
 
 .addFocus {
-  transition: transform 1s ease-in, box-shadow 0.3s ease-in-out;
+  transition: transform 1s ease-in, box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
   transform: scale(1.2);
   box-shadow: 0px 0px 10px 10px rgba(167, 167, 167, 0.3);
+  background-color: #fff6ed;
 }
 
 .tileframe {
