--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -330,8 +330,8 @@ body {
 }
 
 .addFocus {
-    transition: transform 1s ease-in, box-shadow $easy, background-color $easy;
-    transform: scale(1.2);
+    transition: transform .5s ease-in, box-shadow $easy, background-color $easy;
+    transform: scale(1.05);
     box-shadow: 0px 0px 10px 10px rgba(167, 167, 167, 0.3);
     background-color: #fff6ed;
 }
